# team-dev-yt

./: README.md  pyproject.toml
src/my_crew_example/: crew.py  main.py
src/my_crew_example/config/: agents.yaml
