[project]
name = "my_crew_example"
version = "0.1.0"
description = "my_crew_example using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
my_crew_example = "my_crew_example.main:run"
run_crew = "my_crew_example.main:run"
train = "my_crew_example.main:train"
replay = "my_crew_example.main:replay"
test = "my_crew_example.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
